fix: 页面 多语言选择

--- a/public/src/locales/en.json
+++ b/public/src/locales/en.json
@@ -1,4 +1,31 @@
 {
+  "home": "Home",
+  "dashboard": "Dashboard",
+  "userManagement": "User Management",
+  "roleManagement": "Role Management",
+  "systemSettings": "System Settings",
+  "userCenter": "User Center",
+  "changePassword": "Change Password",
+  "logout": "Logout",
+  "oldPassword": "Old Password",
+  "newPassword": "New Password",
+  "confirmNewPassword": "Confirm New Password",
+  "enterOldPassword": "Please enter old password",
+  "enterNewPassword": "Please enter new password",
+  "enterNewPasswordAgain": "Please enter new password again",
+  "cancel": "Cancel",
+  "confirm": "Confirm",
+  "passwordNotMatch": "Passwords do not match",
+  "passwordLengthLimit": "Password must be between 6 and 20 characters",
+  "unknownPage": "Unknown Page",
+  "welcome": "Welcome to {name} Admin System",
+  "dashboardDesc": "This is the home page of the admin system, showing global system settings",
+  "systemConfig": "System Global Configuration",
+  "systemName": "System Name",
+  "captchaStatus": "Captcha Status",
+  "enabled": "Enabled",
+  "disabled": "Disabled",
+  "allConfig": "All Configurations",
   "app": {
     "title": "Admin System"
   },
