--- a/public/src/locales/zh.json
+++ b/public/src/locales/zh.json
@@ -1,4 +1,31 @@
 {
+  "home": "首页",
+  "dashboard": "仪表盘",
+  "userManagement": "用户管理",
+  "roleManagement": "角色管理",
+  "systemSettings": "系统设置",
+  "userCenter": "用户中心",
+  "changePassword": "修改密码",
+  "logout": "退出登录",
+  "oldPassword": "原密码",
+  "newPassword": "新密码",
+  "confirmNewPassword": "确认新密码",
+  "enterOldPassword": "请输入原密码",
+  "enterNewPassword": "请输入新密码",
+  "enterNewPasswordAgain": "请再次输入新密码",
+  "cancel": "取消",
+  "confirm": "确认",
+  "passwordNotMatch": "两次输入密码不一致",
+  "passwordLengthLimit": "密码长度在 6 到 20 个字符",
+  "unknownPage": "未知页面",
+  "welcome": "欢迎使用{name}后台管理系统",
+  "dashboardDesc": "这是后台管理系统的首页，展示了全局系统设置的使用",
+  "systemConfig": "系统全局配置",
+  "systemName": "系统名称",
+  "captchaStatus": "验证码状态",
+  "enabled": "已开启",
+  "disabled": "已关闭",
+  "allConfig": "所有配置",
   "app": {
     "title": "管理系统"
   },
