fix: setting 页面适配多语言

--- a/public/src/locales/en.json
+++ b/public/src/locales/en.json
@@ -125,11 +125,40 @@
     "siteName": "Site Name",
     "siteDescription": "Site Description",
     "adminEmail": "Admin Email",
-    "saveSuccess": "Saved successfully",
-    "saveFailed": "Save failed",
-    "confirmSave": "Confirm save changes?",
-    "resetConfirm": "Confirm reset settings?",
-    "loadError": "Failed to load system settings"
+    "saveSuccess": "Settings saved successfully",
+    "saveFailed": "Failed to save settings",
+    "confirmSave": "Confirm to save changes?",
+    "resetConfirm": "Confirm to reset settings?",
+    "loadError": "Failed to get system settings",
+    "systemName": "System Name",
+    "systemNamePlaceholder": "Please enter system name",
+    "systemLogo": "System Logo",
+    "systemConfig": "System Configuration",
+    "systemLanguage": "System Language",
+    "selectLanguage": "Please select system language",
+    "simplifiedChinese": "Simplified Chinese",
+    "english": "English",
+    "themeSettings": "Theme Settings",
+    "themeColor": "Theme Color",
+    "navMode": "Navigation Mode",
+    "sidebarMode": "Sidebar",
+    "topNavMode": "Top Navigation",
+    "darkMode": "Dark Mode",
+    "securitySettings": "Security Settings",
+    "loginCaptcha": "Login Captcha",
+    "passwordStrength": "Password Strength",
+    "selectPasswordStrength": "Please select password strength requirement",
+    "low": "Low",
+    "medium": "Medium",
+    "high": "High",
+    "saveSettings": "Save Settings",
+    "reset": "Reset",
+    "uploadImageOnly": "Only image files can be uploaded!",
+    "uploadSizeLimit": "Image size cannot exceed 2MB!",
+    "loadSuccess": "Settings loaded successfully",
+    "loadFailed": "Failed to load settings",
+    "saveFailed": "Failed to save settings",
+    "resetSuccess": "Reset to default settings"
   },
   "common": {
     "save": "Save",
