--- a/public/src/locales/zh.json
+++ b/public/src/locales/zh.json
@@ -129,7 +129,36 @@
     "saveFailed": "保存失败",
     "confirmSave": "确认保存更改？",
     "resetConfirm": "确认重置设置？",
-    "loadError": "获取系统设置失败"
+    "loadError": "获取系统设置失败",
+    "systemName": "系统名称",
+    "systemNamePlaceholder": "请输入系统名称",
+    "systemLogo": "系统Logo",
+    "systemConfig": "系统配置",
+    "systemLanguage": "系统语言",
+    "selectLanguage": "请选择系统语言",
+    "simplifiedChinese": "简体中文",
+    "english": "English",
+    "themeSettings": "主题设置",
+    "themeColor": "主题色",
+    "navMode": "导航模式",
+    "sidebarMode": "侧边栏",
+    "topNavMode": "顶部导航",
+    "darkMode": "暗黑模式",
+    "securitySettings": "安全设置",
+    "loginCaptcha": "登录验证码",
+    "passwordStrength": "密码强度",
+    "selectPasswordStrength": "请选择密码强度要求",
+    "low": "低",
+    "medium": "中",
+    "high": "高",
+    "saveSettings": "保存设置",
+    "reset": "重置",
+    "uploadImageOnly": "上传文件只能是图片格式!",
+    "uploadSizeLimit": "上传图片大小不能超过 2MB!",
+    "loadSuccess": "设置加载成功",
+    "loadFailed": "加载设置失败",
+    "saveFailed": "保存设置失败",
+    "resetSuccess": "已重置为默认设置"
   },
   "common": {
     "save": "保存",
