feat: role i18n适配

--- a/public/src/locales/en.json
+++ b/public/src/locales/en.json
@@ -101,13 +101,25 @@
     "editSuccess": "Updated successfully"
   },
   "role": {
+    "management": "Role Management",
     "title": "Role Management",
+    "list": "Role List",
     "add": "Add Role",
-    "edit": "Edit Role",
-    "delete": "Delete Role",
+    "addRole": "Add Role",
+    "edit": "Edit",
+    "delete": "Delete",
     "name": "Role Name",
     "description": "Description",
     "permissions": "Permissions",
+    "permissionCount": "Permissions",
+    "userCount": "Users",
+    "count": "",
+    "person": " users",
+    "status": "Status",
+    "enabled": "Enabled",
+    "disabled": "Disabled",
+    "actions": "Actions",
+    "setPermissions": "Set Permissions",
     "createTime": "Create Time",
     "updateTime": "Update Time",
     "operations": "Operations",
