--- a/public/src/locales/zh.json
+++ b/public/src/locales/zh.json
@@ -101,13 +101,25 @@
     "editSuccess": "修改成功"
   },
   "role": {
+    "management": "角色管理",
     "title": "角色管理",
+    "list": "角色列表",
     "add": "添加角色",
-    "edit": "编辑角色",
-    "delete": "删除角色",
+    "addRole": "新增角色",
+    "edit": "编辑",
+    "delete": "删除",
     "name": "角色名称",
-    "description": "角色描述",
+    "description": "描述",
     "permissions": "权限",
+    "permissionCount": "权限数",
+    "userCount": "用户数",
+    "count": "个",
+    "person": "人",
+    "status": "状态",
+    "enabled": "启用",
+    "disabled": "禁用",
+    "actions": "操作",
+    "setPermissions": "权限设置",
     "createTime": "创建时间",
     "updateTime": "更新时间",
     "operations": "操作",
