feat: 页面 角色编辑

--- a/public/src/locales/en.json
+++ b/public/src/locales/en.json
@@ -107,6 +107,7 @@
     "add": "Add Role",
     "addRole": "Add Role",
     "edit": "Edit",
+    "editRole": "Edit Role",
     "delete": "Delete",
     "name": "Role Name",
     "description": "Description",
