--- a/public/src/locales/zh.json
+++ b/public/src/locales/zh.json
@@ -107,6 +107,7 @@
     "add": "添加角色",
     "addRole": "新增角色",
     "edit": "编辑",
+    "editRole": "编辑角色",
     "delete": "删除",
     "name": "角色名称",
     "description": "描述",
