--- a/public/src/locales/en.json
+++ b/public/src/locales/en.json
@@ -77,6 +77,7 @@
     "edit": "Edit User",
     "delete": "Delete User",
     "username": "Username",
+    "password": "Password",
     "nickname": "Nickname",
     "email": "Email",
     "phone": "Phone",
@@ -90,12 +91,15 @@
     "inactive": "Inactive",
     "search": "Search",
     "reset": "Reset",
+    "resetPassword": "Reset Password",
     "changePassword": "Change Password",
     "oldPassword": "Old Password",
     "newPassword": "New Password",
     "confirmPassword": "Confirm Password",
     "passwordMismatch": "Passwords do not match",
     "changePasswordSuccess": "Password changed successfully",
+    "resetPasswordConfirm": "Are you sure you want to reset this user's password?",
+    "resetPasswordSuccess": "Password reset successfully",
     "deleteConfirm": "Are you sure you want to delete this user?",
     "deleteSuccess": "Deleted successfully",
     "addSuccess": "Added successfully",
