--- a/public/src/locales/zh.json
+++ b/public/src/locales/zh.json
@@ -77,6 +77,7 @@
     "edit": "编辑用户",
     "delete": "删除用户",
     "username": "用户名",
+    "password": "密码",
     "nickname": "昵称",
     "email": "邮箱",
     "phone": "手机号",
@@ -90,12 +91,15 @@
     "inactive": "禁用",
     "search": "搜索",
     "reset": "重置",
+    "resetPassword": "重置密码",
     "changePassword": "修改密码",
     "oldPassword": "原密码",
     "newPassword": "新密码",
     "confirmPassword": "确认密码",
     "passwordMismatch": "两次输入的密码不一致",
     "changePasswordSuccess": "密码修改成功",
+    "resetPasswordConfirm": "确定要重置该用户的密码吗？",
+    "resetPasswordSuccess": "密码重置成功",
     "deleteConfirm": "确定要删除该用户吗？",
     "deleteSuccess": "删除成功",
     "addSuccess": "添加成功",
