--- a/public/src/locales/zh.json
+++ b/public/src/locales/zh.json
@@ -195,6 +195,8 @@
     "reset": "重置",
     "uploadImageOnly": "上传文件只能是图片格式!",
     "uploadSizeLimit": "上传图片大小不能超过 2MB!",
+    "uploadSuccess": "上传成功",
+    "uploadFailed": "上传失败",
     "loadSuccess": "设置加载成功",
     "loadFailed": "加载设置失败",
     "resetSuccess": "已重置为默认设置"
