--- a/public/src/locales/zh.json
+++ b/public/src/locales/zh.json
@@ -57,7 +57,8 @@
     "dashboard": "仪表盘",
     "users": "用户管理",
     "roles": "角色管理",
-    "settings": "系统设置"
+    "settings": "系统设置",
+    "operateLogs": "操作日志"
   },
   "dashboard": {
     "welcome": "欢迎回来",
@@ -200,6 +201,15 @@
     "loadSuccess": "设置加载成功",
     "loadFailed": "加载设置失败",
     "resetSuccess": "已重置为默认设置"
+  },
+  "operateLog": {
+    "title": "操作日志",
+    "username": "用户名",
+    "content": "操作内容",
+    "ip": "IP地址",
+    "createTime": "创建时间",
+    "startTime": "开始时间",
+    "endTime": "结束时间"
   },
   "common": {
     "save": "保存",
