--- a/public/src/locales/zh.json
+++ b/public/src/locales/zh.json
@@ -201,7 +201,12 @@
     "uploadFailed": "上传失败",
     "loadSuccess": "设置加载成功",
     "loadFailed": "加载设置失败",
-    "resetSuccess": "已重置为默认设置"
+    "resetSuccess": "已重置为默认设置",
+    "tabSystem": "系统设置",
+    "tabThirdParty": "第三方服务配置",
+    "mapService": "地图服务配置",
+    "mapAk": "地图服务密钥",
+    "mapAkPlaceholder": "请输入地图服务密钥"
   },
   "operateLog": {
     "title": "操作日志",
