--- a/public/src/locales/zh.json
+++ b/public/src/locales/zh.json
@@ -4,6 +4,7 @@
   "userManagement": "用户管理",
   "roleManagement": "角色管理",
   "systemSettings": "系统设置",
+  "positionManagement": "位置管理",
   "operateLogs": "操作日志",
   "userCenter": "用户中心",
   "changePassword": "修改密码",
@@ -59,6 +60,8 @@
     "users": "用户管理",
     "roles": "角色管理",
     "settings": "系统设置",
+    "systemSettings": "系统设置",
+    "positionManagement": "位置管理",
     "operateLogs": "操作日志"
   },
   "dashboardPage": {
@@ -213,6 +216,39 @@
     "serviceConfig": "服务区域",
     "region": "区域",
     "regionPlaceholder": "请输入区域"
+  },
+  "position": {
+    "title": "位置管理",
+    "add": "添加位置",
+    "edit": "编辑位置",
+    "delete": "删除位置",
+    "city": "城市",
+    "cityPlaceholder": "请输入城市名称",
+    "location": "位置",
+    "locationPlaceholder": "请输入详细位置",
+    "customName": "自定义名称",
+    "customNamePlaceholder": "请输入自定义名称",
+    "longitude": "经度",
+    "latitude": "纬度",
+    "coordinates": "坐标",
+    "creator": "创建人",
+    "createTime": "创建时间",
+    "operations": "操作",
+    "search": "搜索",
+    "addSuccess": "添加成功",
+    "editSuccess": "编辑成功",
+    "deleteSuccess": "删除成功",
+    "deleteConfirm": "确定要删除该位置吗？",
+    "mapTip": "点击地图选择位置，或使用上方搜索框搜索地点",
+    "mapLoadFailed": "地图加载失败",
+    "mapKeyNotFound": "未配置地图密钥",
+    "locationFound": "已找到位置",
+    "locationNotFound": "未找到该位置",
+    "useServiceCity": "使用服务城市",
+    "citySetFromService": "已使用服务配置中的城市",
+    "serviceCityNotSet": "服务配置中未设置城市",
+    "loadServiceConfigFailed": "加载服务配置失败",
+    "cityNotFound": "未找到该城市"
   },
   "operateLog": {
     "title": "操作日志",
