--- a/public/src/locales/en.json
+++ b/public/src/locales/en.json
@@ -4,6 +4,7 @@
   "userManagement": "User Management",
   "roleManagement": "Role Management",
   "systemSettings": "System Settings",
+  "positionManagement": "Position Management",
   "operateLogs": "Operation Logs",
   "userCenter": "User Center",
   "changePassword": "Change Password",
@@ -59,6 +60,8 @@
     "users": "User Management",
     "roles": "Role Management",
     "settings": "System Settings",
+    "systemSettings": "System Settings",
+    "positionManagement": "Position Management",
     "operateLogs": "Operation Logs"
   },
   "dashboardPage": {
@@ -213,6 +216,39 @@
     "serviceConfig": "Service Region",
     "region": "Region",
     "regionPlaceholder": "Please enter region"
+  },
+  "position": {
+    "title": "Position Management",
+    "add": "Add Position",
+    "edit": "Edit Position",
+    "delete": "Delete Position",
+    "city": "City",
+    "cityPlaceholder": "Please enter city name",
+    "location": "Location",
+    "locationPlaceholder": "Please enter detailed location",
+    "customName": "Custom Name",
+    "customNamePlaceholder": "Please enter custom name",
+    "longitude": "Longitude",
+    "latitude": "Latitude",
+    "coordinates": "Coordinates",
+    "creator": "Creator",
+    "createTime": "Create Time",
+    "operations": "Operations",
+    "search": "Search",
+    "addSuccess": "Added successfully",
+    "editSuccess": "Updated successfully",
+    "deleteSuccess": "Deleted successfully",
+    "deleteConfirm": "Are you sure you want to delete this position?",
+    "mapTip": "Click on the map to select a location, or use the search box above to search for a location",
+    "mapLoadFailed": "Failed to load map",
+    "mapKeyNotFound": "Map key not configured",
+    "locationFound": "Location found",
+    "locationNotFound": "Location not found",
+    "useServiceCity": "Use Service City",
+    "citySetFromService": "City from service configuration has been used",
+    "serviceCityNotSet": "City not set in service configuration",
+    "loadServiceConfigFailed": "Failed to load service configuration",
+    "cityNotFound": "City not found"
   },
   "operateLog": {
     "title": "Operation Logs",
