--- a/public/src/locales/en.json
+++ b/public/src/locales/en.json
@@ -5,6 +5,7 @@
   "roleManagement": "Role Management",
   "systemSettings": "System Settings",
   "positionManagement": "Position Management",
+  "tenantManagement": "Tenant Management",
   "operateLogs": "Operation Logs",
   "userCenter": "User Center",
   "changePassword": "Change Password",
@@ -62,6 +63,7 @@
     "settings": "System Settings",
     "systemSettings": "System Settings",
     "positionManagement": "Position Management",
+    "tenantManagement": "Tenant Management",
     "operateLogs": "Operation Logs"
   },
   "dashboardPage": {
@@ -249,6 +251,36 @@
     "serviceCityNotSet": "City not set in service configuration",
     "loadServiceConfigFailed": "Failed to load service configuration",
     "cityNotFound": "City not found"
+  },
+  "tenant": {
+    "title": "Tenant Management",
+    "add": "Add Tenant",
+    "edit": "Edit Tenant",
+    "delete": "Delete Tenant",
+    "name": "Tenant Name",
+    "namePlaceholder": "Please enter tenant name",
+    "nameLengthLimit": "Tenant name cannot exceed 128 characters",
+    "code": "Tenant Code",
+    "codePlaceholder": "Please enter tenant code",
+    "codeLengthLimit": "Tenant code cannot exceed 64 characters",
+    "contactEmail": "Contact Email",
+    "contactEmailPlaceholder": "Please enter contact email",
+    "emailFormatError": "Invalid email format",
+    "contactPhone": "Contact Phone",
+    "contactPhonePlaceholder": "Please enter contact phone",
+    "phoneLengthLimit": "Contact phone cannot exceed 32 characters",
+    "status": "Status",
+    "enabled": "Enabled",
+    "disabled": "Disabled",
+    "config": "Extended Config",
+    "configPlaceholder": "Please enter extended configuration (JSON format)",
+    "createTime": "Create Time",
+    "operations": "Operations",
+    "search": "Search",
+    "addSuccess": "Added successfully",
+    "editSuccess": "Updated successfully",
+    "deleteSuccess": "Deleted successfully",
+    "deleteConfirm": "Are you sure you want to delete this tenant?"
   },
   "operateLog": {
     "title": "Operation Logs",
