--- a/public/src/locales/zh.json
+++ b/public/src/locales/zh.json
@@ -5,6 +5,7 @@
   "roleManagement": "角色管理",
   "systemSettings": "系统设置",
   "positionManagement": "位置管理",
+  "tenantManagement": "租户管理",
   "operateLogs": "操作日志",
   "userCenter": "用户中心",
   "changePassword": "修改密码",
@@ -62,6 +63,7 @@
     "settings": "系统设置",
     "systemSettings": "系统设置",
     "positionManagement": "位置管理",
+    "tenantManagement": "租户管理",
     "operateLogs": "操作日志"
   },
   "dashboardPage": {
@@ -249,6 +251,36 @@
     "serviceCityNotSet": "服务配置中未设置城市",
     "loadServiceConfigFailed": "加载服务配置失败",
     "cityNotFound": "未找到该城市"
+  },
+  "tenant": {
+    "title": "租户管理",
+    "add": "添加租户",
+    "edit": "编辑租户",
+    "delete": "删除租户",
+    "name": "租户名称",
+    "namePlaceholder": "请输入租户名称",
+    "nameLengthLimit": "租户名称长度不能超过128个字符",
+    "code": "租户编码",
+    "codePlaceholder": "请输入租户编码",
+    "codeLengthLimit": "租户编码长度不能超过64个字符",
+    "contactEmail": "联系邮箱",
+    "contactEmailPlaceholder": "请输入联系邮箱",
+    "emailFormatError": "邮箱格式不正确",
+    "contactPhone": "联系电话",
+    "contactPhonePlaceholder": "请输入联系电话",
+    "phoneLengthLimit": "联系电话长度不能超过32个字符",
+    "status": "状态",
+    "enabled": "启用",
+    "disabled": "停用",
+    "config": "扩展配置",
+    "configPlaceholder": "请输入扩展配置（JSON格式）",
+    "createTime": "创建时间",
+    "operations": "操作",
+    "search": "搜索",
+    "addSuccess": "添加成功",
+    "editSuccess": "编辑成功",
+    "deleteSuccess": "删除成功",
+    "deleteConfirm": "确定要删除该租户吗？"
   },
   "operateLog": {
     "title": "操作日志",
